# axceta

./: .gitignore  heures.txt
ExampleExplorAI/: README.md  example.py  main.py  pyproject.toml
ExampleExplorAI/algos/: utils.py
ultrasound/: pyproject.toml  requirements.txt  setup.py
ultrasound/ADX_plugin/: py-dem-adx-quality-index-01.py  test_batch.csv  test_py-dem-adx-quality-index-01.py
ultrasound/dashboard/: compute.py  dashboard.py  dashboard_v2.py
ultrasound/docs/: algos_description.md  work-on-pi.txt
ultrasound/experimental/: lowpass_agco.ipynb  temp.py
ultrasound/external_scripts/: compare_algos.py
ultrasound/tools/: algo_utils.py  auto_gain.py  avinor-catalys-2.ovpn  avinor-catalys.ovpn  batch_algos.py  compute_metrics.py  dataset_quality.py  disease_detection.py  downsample_tests.py  fill_prediction.py  fill_prediction_agco.py  full_silo_detection.py  generate_csharp_tests.py  prod_algos.py  raw_processing.py  regression_smoothing.py  signal_quality.py  smoothing.py  ultrasound_algos.py  utils.py  viz_agco.py  wavefront.py  wavefront_with_params.py
ultrasound/tools/tests/: generate_csharp_tests_tests.py  test_algos.py  test_bang_detection.py  test_envelope.py  test_findpeaks.py  test_fit.py  test_kalman_filter.py  test_metrics.py  test_new_wavefront.py  test_prediction.py  test_quality.py  test_silo_vide.py  test_single_data.py  test_smoothing.py  test_vs_cs_tests.py  test_wavefront.py
ultrasound/us/: algos.py  data.py  main.py  old_algos_catalys.py  plot.py  utils.py
ultrasound/us/forecasting/: algos.py
ultrasound/us/ml/: data.py  ml.py  (+1 more)
(+28 files in other folders)
