[tool.poetry]
name = "test-cases"
version = "0.1.0"
description = "Small script to visualise different cases where there are problems and show our algorithms"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pandas = "^2.1.1"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
