[tool.poetry]
name = "us"
version = "0.1.0"
description = "Noise reduction on ultrasonic sensor data to measure quantity of grains in a silo."
authors = ["David <david.abraham.1337@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
rich = "^13.3.2"
scipy = "^1.10.1"
typer = "^0.7.0"
torch = "^2.0.0"
torchvision = "^0.15.1"
pytorch-lightning = "^2.0.0"
pyarrow = "^11.0.0"
aquarel = "^0.0.5"
scikit-learn = "^1.2.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
rope = "^1.7.0"
autopep8 = "^2.0.2"

[tool.poetry.scripts]
us = 'us.main:app'

[build-system]
requires = ["setuptools", "poetry-core"]
build-backend = "poetry.core.masonry.api"
